--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="calculator-card">
             <a href="https://play.google.com/store/apps/details?id=com.mtw.dev.modestcalculator">
                 
-                <img src="/images/calculator-banner.png" alt="Dall-E 2 Banner">
+                <img src="/images/calculator-banner.png" alt="Calculator Banner">
                 <h3>Calculator</h3>
                 <p>
                     The MTW-Development Calculator comes in a modern material design.<br>
