--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="top">
-        <img src="/images/MTW-Development Banner.png" alt="MTW-Development Banner">
+        <img src="./images/MTW-Development Banner.png" alt="MTW-Development Banner">
 
         <h1>About MTW-Development</h1>
         <p>
@@ -30,7 +30,7 @@
         <div class="dalle-card">
             <a href="https://play.google.com/store/apps/details?id=com.mtw.dev.dalle_2">
                 
-                <img src="/images/dalle-banner.png" alt="Dall-E 2 Banner">
+                <img src="./images/dalle-banner.png" alt="Dall-E 2 Banner">
                 <h3>DALL·E 2</h3>
                 <p>
                     The DALL·E 2 application can create stunning AI generated images with OpenAI's DALL·E 2.<br>
@@ -43,7 +43,7 @@
         <div class="calculator-card">
             <a href="https://play.google.com/store/apps/details?id=com.mtw.dev.modestcalculator">
                 
-                <img src="/images/calculator-banner.png" alt="Calculator Banner">
+                <img src="./images/calculator-banner.png" alt="Calculator Banner">
                 <h3>Calculator</h3>
                 <p>
                     The MTW-Development Calculator comes in a modern material design.<br>
@@ -62,7 +62,7 @@
         </svg>
         <div>
             <a href="">
-                <img src="/images/MTW-Development Logo.png" alt="MTW-Development Logo">
+                <img src="./images/MTW-Development Logo.png" alt="MTW-Development Logo">
             </a>
             <h4>2022 MTW Development</h4>
             <p>Copyright © 2022</p>
