--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <a href="">
                 <img src="./images/MTW-Development Logo.png" alt="MTW-Development Logo">
             </a>
-            <h4>2022 MTW Development</h4>
+            <h4>MTW Development</h4>
             <p>Copyright © 2022</p>
         </div>
     </footer>
